fixed some layer z-index issue and fixed avatar size, fit and position

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
 #nav {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .nav-link {
@@ -76,6 +77,8 @@ body {
 #user {
   position: absolute;
   bottom: 1rem;
+  height: 5rem;
+  flex-direction: row;
 }
 
 #icon {
@@ -83,7 +86,14 @@ body {
 }
 
 #avatar {
-  width: 5rem !important;
+  height: 100%;
+  width: auto;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 40px;
+  padding: 0;
+  margin-right: 1rem;
 }
 
 img {
@@ -112,6 +122,10 @@ img {
   margin: 0 0.5rem 0 0;
   height: 100%;
   width: auto;
+  aspect-ratio: 1/1;
+  border-radius: 40px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .post-user-id {
